force-app/main/default/objects/Key_Personnel_Previous_Employment__c/Key_Personnel_Previous_Employment__c.object-meta.xml
<CustomObject>
    <label>Key Personnel Previous Employment</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Previous Employment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Personnel Previous Employments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>