force-app/main/default/objects/Key_Personnel_Previous_Employment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Personnel Previous Employments</relationshipLabel>
    <relationshipName>Key_Personnel_Previous_Employments</relationshipName>
    <type>Lookup</type>
</CustomField>