force-app/main/default/objects/Key_Personnel_Previous_Employment__c/fields/Previous_Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Address__c</fullName>
    <description>To provide the key personnel previous employer address information</description>
    <label>Previous Employer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>