force-app/main/default/objects/Key_Personnel_Previous_Employment__c/fields/Previous_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Name__c</fullName>
    <description>To provide the key personnel previous employer name information</description>
    <label>Previous Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>