force-app/main/default/objects/Key_Personnel_Previous_Employment__c/fields/Previous_Employment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment_Start_Date__c</fullName>
    <description>To provide the key personnel previous employer working period information</description>
    <label>Previous Employment Start Date</label>
    <type>Date</type>
</CustomField>