force-app/main/default/objects/Key_Personnel_Previous_Employment__c/fields/Previous_Role__c.field-meta.xml
<CustomField>
    <fullName>Previous_Role__c</fullName>
    <description>To provide the key personnel previous employer working role information</description>
    <label>Previous Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>