force-app/main/default/objects/Key_Personnel_Previous_Employment__c/validationRules/VR01_PreEmp_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_PreEmp_EndDate</fullName>
    <active>true</active>
    <description>Validate is &apos;End Date&apos; is after &apos;Start Date&apos;</description>
    <errorConditionFormula>Previous_Employment_End_Date__c &lt; Previous_Employment_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Previous_Employment_End_Date__c</errorDisplayField>
    <errorMessage>Please enter another date. Previous Employment End Date should be after the Previous Employment Start Date</errorMessage>
</ValidationRule>